description dropdown alignment issues fixed

--- a/sass/components/_profileView.sass
+++ b/sass/components/_profileView.sass
@@ -1,3 +1,6 @@
+.hidden
+  display: none
+
 .profileViewWrap
   @include outer-container
 
